--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link href="css/normalize.min.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="homepage">
     <header class="main-header">
       <div class="container clearfix">
         <a href="index.html">
@@ -213,7 +213,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -229,7 +229,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -245,7 +245,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -261,7 +261,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
           </section>
@@ -279,7 +279,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -295,7 +295,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -311,7 +311,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -327,7 +327,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
           </section>
@@ -345,7 +345,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -361,7 +361,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -377,7 +377,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
               <article class="product-box-wrapper">
@@ -393,7 +393,7 @@
                   <h1 class="product-box-title">
                     <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
                   </h1>
-                  <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                  <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
                 </div>
               </article>
           </section>
@@ -441,6 +441,6 @@
         <a href="https://htmlacademy.ru" class="a-nobg">HTML Academy</a> &copy; 2016
       </p>
     </footer>
-  <script src="js/main.min.js"></script>
+  <script src="js/catalog.min.js"></script>
   </body>
 </html>
