--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <h1 class="product-box-title">
                   <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 </h1>
-                <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
               </div>
             </article>
             <article class="product-box-wrapper">
@@ -207,7 +207,7 @@
                 <h1 class="product-box-title">
                   <a href="#">Сливочно-кофейное с кусочками шоколада</a>
                 </h1>
-                <a href="product.html" class="btn btn-small" onclick="product_preview(event);">Быстрый просмотр</a>
+                <a href="product.html" class="btn btn-small">Быстрый просмотр</a>
               </div>
             </article>
             <article class="product-box-wrapper">
