--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
                   <img src="img/products/product_01.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                   <span class="product-box-price">
                     <span class="pb-sum">310</span>
+                    <!-- Делалось с расчетом на возможность чтения без css:
+                    https://monosnap.com/file/ZYSOalA9xNesArveh0QidYiespk8WI
+                    Если сделать один span с большим педдингом слева и картинкой рубля
+                    на фоне, без css превратится в "   /кг" -->
                     <span class="pb-currency">руб</span>
                     <span class="pb-amount">/кг</span>
                   </span>
@@ -306,7 +310,7 @@
               <a href="feedback.html" class="btn show-feedback-modal">Форма обратной связи</a>
             </div>
           </div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6008858503708!2d30.32293845969631!3d59.938764622902696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1454332314282" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6008858503708!2d30.32293845969631!3d59.938764622902696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1454332314282" allowfullscreen></iframe>
         </div>
       </main>
       <footer class="main-footer container clearfix">
